--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.25",
     "expo-status-bar": "~2.0.1",
+    "module-resolver": "^1.0.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "styled-components": "6.1.14"
   },
   "devDependencies": {
