--- a/app.json
+++ b/app.json
@@ -2,6 +2,15 @@
   "expo": {
     "name": "SGBCar",
     "slug": "SGBCar",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "plugins": [
+      "expo-font"
+    ],
+    "android": {
+      "package": "com.lucasrs.SGBCar"
+    },
+    "ios": {
+      "bundleIdentifier": "com.lucasrs.SGBCar"
+    }
   }
 }
