--- a/package.json
+++ b/package.json
@@ -9,22 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/urbanist": "^0.2.3",
+    "@hookform/resolvers": "^3.10.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "axios": "^1.7.9",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.25",
+    "expo-font": "~13.0.3",
     "expo-status-bar": "~2.0.1",
     "module-resolver": "^1.0.0",
     "react": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.6",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "styled-components": "6.1.14"
+    "react-native-svg": "15.8.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "styled-components": "6.1.13",
+    "styled-system": "^5.1.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
+    "@types/styled-system": "^5.1.23",
     "typescript": "^5.3.3"
   },
   "private": true
